--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="settings">Settings</string>
     <string name="ListOfSessions">List of Sessions</string>
     <string name="nav_drawer_menu">Navigation Drawer menu</string>
+    <string name="workoutImage">Workout Image</string>
 </resources>
