Excersise Edit/Create almost done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,15 +13,37 @@
     <string name="rest">REST</string>
     <string name="dayTxt">DAY!</string>
     <string name="dropDownArrow">Drop-down arrow</string>
-    <string name="editWorkout">Change Workout</string>
+    <string name="changeWorkout">Change Workout</string>
     <string name="changeIcon">Change Icon</string>
     <string name="viewWorkout">View Workout</string>
     <string name="viewIcon">View Icon</string>
     <string name="createNew">Create New</string>
     <string name="editExercise">Edit the Exercise</string>
     <string name="removeFromList">Remove from the list</string>
-    <string name="Delete">Delete the Exercise</string>
+    <string name="DeleteExercise">Delete the Exercise</string>
     <string name="exerciseDeleted">Exercise Successfully Deleted</string>
-    <string name="cannotDelete">There must be at least one Exercise!</string>
-    <string name="exerciseRemoved">Excercise removed</string>
+    <string name="cannotDeleteExercise">There must be at least one Exercise!</string>
+    <string name="exerciseRemoved">Exercise removed</string>
+    <string name="editWorkout">Edit Workout</string>
+    <string name="workoutDeleted">Workout successfully deleted</string>
+    <string name="cannotDeleteWorkout">There must be at least one Workout!</string>
+    <string name="deleteWorkout">Delete the Workout</string>
+    <string name="onlyWorkoutAssigned">This workout is the only one assigned to any day!</string>
+    <string name="confirm">Confirm</string>
+    <string name="cancel">Cancel</string>
+    <string name="areYouSure">Are you sure?</string>
+    <string name="confirmPermDeletion">This item will be removed completely. This operation cannot be undone</string>
+    <string name="createExercise">Create New Exercise</string>
+    <string name="title">Title</string>
+    <string name="sets">Sets</string>
+    <string name="reps">Reps</string>
+    <string name="pickedImage">Picked Image</string>
+    <string name="changeImage">Click To Change</string>
+    <string name="completionTime">Set Completion Time</string>
+    <string name="hours">hours</string>
+    <string name="minutes">min</string>
+    <string name="seconds">sec</string>
+    <string name="weight">Weight</string>
+    <string name="kilograms">kilograms</string>
+    <string name="dropSet">Drop Sets</string>
 </resources>
