--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="next">Next</string>
     <string name="finish">Finish</string>
     <string name="nextExercise">Next Exercise</string>
-    <string name="longBreak">3 minutes Break!</string>
-    <string name="shortBreak">10 seconds Break!</string>
+    <string name="longBreak">3 min Break!</string>
+    <string name="shortBreak">10 sec Break!</string>
     <string name="failure">Failure</string>
 </resources>
